# open_iA-superbuild

./: CMakeLists.txt  CTestConfig.cmake  README.md  check-apply-patch.cmake.in  hdf5-build.bat.in  hdf5-options.patch  itk-vtkGlue.patch  vs-2019.patch  vs.patch.template  vtk-8.2.0-qt-5.15.patch  vtk-qt-5.15.patch  vtk9-openvr.patch
patches/: OpenCL-Apple.patch  astra-master-vs-remove_30.patch  astra-master-vs.patch.template  astra-v2.0.0-vs.patch.template  astra-v2.1.0-vs.patch.template  astra-v2.2.0-vs.patch.template  astra-v2.3.0-vs.patch.template  astra-vs-remove_30.patch  astra-vs-warnings.patch  astra-vs.patch.template  boost-1.85-vs17.10.patch  hdf5-1.13.2-CTestScript.patch  hdf5-options-1.13.2.patch  hdf5-options-1.14.3.patch  hdf5-options-unix.patch  hdf5-options.patch  hdf5-vs22-config.patch  itk-5.2-metaIO-decompressgreater2GBfix.patch  itk-5.3.0-iterator.patch  itk-5.3.0-vs2019.patch  itk-5.4.0-METAIO_STREAM.patch  itk-ReconstructionImageFilter-padSize.patch  itk-lrintf.patch  onnx-1.4.0-runtime_c_api.h.patch.template  onnx-1.8.1-include.patch  onnx-runtime_c_api.h.patch.template  vtk-8.1.2-qt-5.15.patch  vtk-9.2-vr-9620.patch  vtk-9.3-vs-debug.patch  vtk-OpenXR-1.1.x.patch  vtk-parallelCoordinates.patch  vtk-parallelCoordinates.patch.template
patches/optional/: astra-warnings.patch  itk-5.1.x-or-so-clang-c++20.patch  itk-5.2.0-rtk-policy-0091.patch  itk-5.3.0-trailing-return-type.patch  itk-GPU-shared-lib.patch  itk-g++11.patch  itkConfidenceConnectedImageFilter.patch  itkImageToHistogramFilter.hxx.patch  itkLabelOverlapMeasuresImageFilter.h.patch  itkMaskedImageToHistogramFilter.hxx.patch  itkReconstructionImageFilter.hxx.patch  rtkCudaBackProjectionImageFilter.h.patch  rtkCudaCropImageFilter.h.patch  rtkCudaDisplacedDetectorImageFilter.h.patch  rtkCudaFDKBackProjectionImageFilter.h.patch  rtkCudaFDKConeBeamReconstructionFilter.h.patch  rtkCudaFDKWeightProjectionFilter.h.patch  rtkCudaFFTProjectionsConvolutionImageFilter.h.patch  rtkCudaForwardProjectionImageFilter.h.patch  rtkCudaLaplacianImageFilter.h.patch  vtk-openvr-override.patch  vtk-openvr-shutdown.patch  vtk-theora.patch
